Fixing on mobile

--- a/AboutMe.css
+++ b/AboutMe.css
@@ -1,6 +1,6 @@
 html {
   background: linear-gradient(-225deg, #2CD8D5 0%, #6B8DD6 48%, #8E37D7 100%) no-repeat center center fixed;
-  height: 100%;
+  min-height: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
